# ganusa-research-agent

./: .gitignore  Makefile  README.md  pyproject.toml  tavilybestsearchdoc.md
src/: config.py  main.py
src/graph/: builder.py  state.py
src/graph/nodes/: executor.py  planner.py  reasoner.py  reflector.py  search.py  synthesizer.py  verifier.py
src/schemas/: api.py
src/services/: bedrock_client.py  gemini_client.py  llm_router.py  tavily_client.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: index.html
src/utils/: json_parser.py
tests/: test_search.py
